# Minimizers

./: .gitignore  CMakeLists.txt  README.md  test.sh  test_xxsmall.sh
apps/: BreiZHMinimizer.cpp  BreiZHMinimizer_cli.cpp  BreiZHMinimizer_v2.cpp  color_sort_and_dump.cpp  color_sorter.cpp  color_stats.cpp  count_kmer_v3.cpp  extract_color.cpp  extract_index.cpp  kmer_sorter.cpp  merge.cpp  merge_all.cpp  min_sorter.cpp  min_sorter_ref.cpp  min_sorter_v2.cpp  min_sorter_v3.cpp  raw_compare.cpp
include/: BreiZHMinimizer.hpp  config.hpp
lib/: BreiZHMinimizer.cpp  BreiZHMinimizer.hpp
src/: BreiZHMinimizer.cpp  color_sorter.cpp  color_stats.cpp  count_kmer_v3.cpp  extract_all_colors.cpp  extract_color.cpp  extract_index.cpp  merge.cpp  merge_all.cpp  min_sorter.cpp  min_sorter_ref.cpp  min_sorter_v2.cpp  min_sorter_v3.cpp  min_sorter_v4.cpp  raw_dump.cpp  stats.cpp  test_generator.cpp
src/back/: SaveMiniToRawFile.cpp  SaveMiniToTxtFile.cpp
src/back/raw/: SaveMiniToRawFile.cpp  SaveMiniToRawFile.hpp  SaveRawToFile.cpp  SaveRawToFile.hpp
src/back/txt/: SaveMiniToTxtFile.cpp  SaveMiniToTxtFile.hpp
src/files/: file_reader.hpp  file_reader_library.cpp  file_reader_library.hpp  file_writer.hpp  file_writer_library.cpp  file_writer_library.hpp  stream_reader.hpp  stream_reader_library.cpp  stream_reader_library.hpp  stream_writer.hpp  stream_writer_library.cpp  stream_writer_library.hpp
src/files/bz2/: file_bz2_reader.cpp  file_bz2_reader.hpp
src/files/gz/: file_gz_reader.cpp  file_gz_reader.hpp
src/files/lz4/: file_lz4_reader.cpp  file_lz4_reader.hpp
src/files/raw/: file_raw_reader.cpp  file_raw_reader.hpp
src/front/: count_file_lines.cpp  count_file_lines.hpp  count_lines.hpp  fast_fasta_file.hpp  fast_kmer_file.hpp  file_reader.hpp  file_reader_ATCG_only.hpp  read_k_value.cpp  read_k_value.hpp
src/front/fastx/: count_lines_fastx.cpp  count_lines_fastx.hpp  read_fastx_ATCG_only.cpp  read_fastx_ATCG_only.hpp  read_fastx_file.cpp  read_fastx_file.hpp  read_fastx_file_no_N.cpp  read_fastx_file_no_N.hpp  read_fastx_k_value.cpp  read_fastx_k_value.hpp
src/front/fastx_bz2/: count_lines_fastx_bz2.cpp  count_lines_fastx_bz2.hpp  read_fastx_bz2_ATCG_only.cpp  read_fastx_bz2_ATCG_only.hpp  read_fastx_bz2_file.cpp  read_fastx_bz2_file.hpp  read_fastx_bz2_k_value.cpp  read_fastx_bz2_k_value.hpp
src/front/fastx_gz/: read_fastx_gz_ATCG_only.cpp  read_fastx_gz_ATCG_only.hpp  read_fastx_gz_file.cpp  read_fastx_gz_file.hpp  read_fastx_gz_file_no_N.cpp  read_fastx_gz_file_no_N.hpp  toto.hpp
src/front/fastx_lz4/: read_fastx_lz4_ATCG_only.cpp  read_fastx_lz4_ATCG_only.hpp  read_fastx_lz4_file.cpp  read_fastx_lz4_file.hpp
src/hash/: CustomMurmurHash3.hpp  MurmurHash3.cpp
src/kmer/: bfc_hash64.hpp  fast_decode.hpp  nucl_encode.hpp  tools_truc.hpp
src/kmer_list/: kmer_counter.cpp  kmer_counter.hpp  smer_deduplication.cpp  smer_deduplication.hpp
src/merger/: CMergeFile.cpp  CMergeFile.hpp  data_merger.cpp  data_merger.hpp  merger_in.cpp  merger_in.hpp  merger_level_0.cpp  merger_level_0.hpp  merger_level_1.cpp  merger_level_1.hpp  merger_level_2_0.cpp  merger_level_2_32.cpp  merger_level_2_32.hpp  merger_level_64_n.cpp  merger_level_64_n.hpp  merger_level_n_p.cpp  merger_level_n_p.hpp  merger_level_s.cpp  merger_n_files.cpp
src/merger/in_file/: merger_in.cpp  merger_in.hpp  merger_level_0.cpp  merger_level_1.cpp  merger_level_2_0.cpp  merger_level_2_0.hpp  merger_level_2_32.cpp  merger_level_2_32.hpp  merger_level_64_n.cpp  merger_level_64_n.hpp  merger_level_n_p.cpp  merger_level_n_p_final.cpp  merger_level_n_p_final.hpp  merger_level_s.cpp  merger_level_s.hpp  merger_n_files.cpp  merger_n_files.hpp  merger_n_files_ge64.cpp  merger_n_files_ge64.hpp  merger_n_files_lt64.cpp  merger_n_files_lt64.hpp
src/merger/in_ram/: ram_merger_in.cpp  ram_merger_in.hpp  ram_merger_level_0.cpp  ram_merger_level_0.hpp  ram_merger_level_1.cpp  ram_merger_level_1.hpp  ram_merger_level_2_0.cpp  ram_merger_level_2_0.hpp  ram_merger_level_2_32.cpp  ram_merger_level_2_32.hpp  ram_merger_level_64_n.cpp  ram_merger_level_64_n.hpp  ram_merger_level_n_p.cpp  ram_merger_level_n_p.hpp  ram_merger_level_s.cpp  ram_merger_level_s.hpp  ram_merger_n_files.cpp  ram_merger_n_files.hpp
src/minimizer/: deduplication.cpp  deduplication.hpp  extract_kmer_v3.cpp  extract_kmer_v3.hpp  extract_kmer_v4.cpp  extract_kmer_v4.hpp  minimizer.cpp  minimizer.hpp  minimizer_v2.cpp  minimizer_v2.hpp  minimizer_v3.cpp  minimizer_v3.hpp  minimizer_v4.cpp  minimizer_v4.hpp
src/sorting/crumsort/: crumsort.cpp  crumsort.hpp
src/sorting/crumsort_2cores/: crumsort_2cores.cpp  crumsort_2cores.hpp
src/sorting/external_sort/: external_sort.cpp  external_sort.hpp  external_sort_sparse.cpp
src/sorting/std_2cores/: std_2cores.cpp  std_2cores.hpp
src/sorting/std_4cores/: std_4cores.cpp  std_4cores.hpp
src/tools/: CTimer.cpp  colors.hpp  fast_atoi.hpp  file_stats.cpp  file_stats.hpp  int_to_chars.hpp  read_k_value.hpp  vec_copy.hxx
src/tools/CFileBuffer/: CFileBuffer.cpp  CFileBuffer.hpp
src/tools/CMutex/: CMutex.cpp  CMutex.hpp
src/tools/CTimer/: CTimer.cpp  CTimer.hpp
tests/merger/: test.sh
tests/merger/test_files_128/: test.sh  testf_002.raw  testf_007.raw  testf_008.raw  testf_015.raw  testf_019.raw  testf_026.raw  testf_028.raw  testf_034.raw  testf_042.raw  testf_046.raw  testf_050.raw  testf_051.raw  testf_053.raw  testf_055.raw  testf_062.raw  testf_065.raw  testf_071.raw  testf_079.raw  testf_086.raw  testf_090.raw  testf_091.raw  testf_097.raw  testf_102.raw  testf_104.raw  testf_106.raw  testf_108.raw  testf_113.raw  testf_114.raw  testf_121.raw  testf_122.raw  testf_123.raw
tests/merger/test_files_129/: test.sh  testf_003.raw  testf_005.raw  testf_016.raw  testf_017.raw  testf_020.raw  testf_033.raw  testf_044.raw  testf_045.raw  testf_049.raw  testf_056.raw  testf_058.raw  testf_061.raw  testf_063.raw  testf_066.raw  testf_067.raw  testf_072.raw  testf_075.raw  testf_076.raw  testf_078.raw  testf_082.raw  testf_092.raw  testf_093.raw  testf_094.raw  testf_099.raw  testf_100.raw  testf_105.raw  (+6 more)
(+232 files in other folders)
